--- a/settings.py.example
+++ b/settings.py.example
@@ -4,9 +4,9 @@ from os.path import dirname
 DISCORD_TOKEN='<token>'
 
 CHANNELS={
-    "jeden kanál",
-    "druhej kanál",
-    "třetí kanál",
+    "server name--jeden kanál",
+    "server name--druhej kanál",
+    "server name--třetí kanál",
 }
 
 STATE_DIRECTORY = os.path.join(dirname(__file__), "state")
