--- a/settings.py.example
+++ b/settings.py.example
@@ -18,3 +18,10 @@ TEMP_DIRECTORY = os.path.join(dirname(__file__), "out", "tmp")
 
 URLS_FILE = os.path.join(dirname(__file__), "out", "urls.txt")
 
+IGMDB_TOKEN = '…'  # obtain token from https://www.igmdb.org/?page=usercp
+
+RENDERING_OUTPUT_CHANNEL = 'server name--výstupní kanál'
+
+RENDERING_DONE_MESSAGE_PREFIX = "New render:\n"
+
+RENDERING_DONE_MESSAGE_SUFFIX = "\nRendered by igmdb"
