Add support for reactions

--- a/settings.py.example
+++ b/settings.py.example
@@ -74,3 +74,11 @@ DEMO_RENDERING_LOCAL_YOUTUBE_PARAMS = [
 ]
 
 DISCORD_MAX_VIDEO_SIZE = 100*1024*1024
+
+REACTIONS_WIP = ['\N{HOURGLASS}']
+
+REACTIONS_REJECTED = ['🚫', '💩']
+
+REACTIONS_DONE = ['\u2714', '\u2705']
+
+REACTIONS_FAILED = ['💩', '❌']
