--- a/settings.py.example
+++ b/settings.py.example
@@ -73,6 +73,8 @@ DEMO_RENDERING_LOCAL_YOUTUBE_PARAMS = [
     '--rate-limit=352144', # max upload rate
 ]
 
+DEMO_RENDERING_LOCAL_YOUTUBE_DESCRIPTION_SUFFIX = 'description suffix'
+
 DISCORD_MAX_VIDEO_SIZE = 100*1024*1024
 
 REACTIONS_WIP = ['\N{HOURGLASS}']
