--- a/settings.py.example
+++ b/settings.py.example
@@ -73,6 +73,8 @@ DEMO_RENDERING_LOCAL_YOUTUBE_PARAMS = [
     '--rate-limit=352144', # max upload rate
 ]
 
+DEMO_RENDERING_MISSING_DETAILS_REPORT_USER_ID = 783750040560336947  # https://techswift.org/2020/04/22/how-to-find-your-user-id-on-discord/
+
 DEMO_RENDERING_LOCAL_YOUTUBE_DESCRIPTION_SUFFIX = 'description suffix'
 
 DISCORD_MAX_VIDEO_SIZE = 100*1024*1024
